--- a/org.lamport.tla.toolbox.yml
+++ b/org.lamport.tla.toolbox.yml
@@ -14,7 +14,8 @@ add-extensions:
 
 finish-args:
   - --share=ipc
-  - --socket=x11
+  - --socket=wayland
+  - --socket=fallback-x11
   - --socket=pulseaudio
   - --share=network
   - --device=dri
